[NONE] Refactored Project Structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = "0.4.26" # datetime
 dotenv = "0.15.0" # environment variables
 lazy_static = "1.4.0" # lazy load static variables
+mockall = "0.11.4" # mocking
 mongodb = "2.6.0" # mongodb
 regex = "1.9.3" # regex support
 serde = "1.0.183" # serialise & deserialise
