--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.26" # datetime
+clipboard = "0.5.0" # clipboard api
 dotenv = "0.15.0" # environment variables
 lazy_static = "1.4.0" # lazy load static variables
 mockall = "0.11.4" # mocking
